--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/gebeya_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/gebeya_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MoodSubmit"></activity>
-        <activity android:name=".MyMoodsActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".MyMoodsActivity"
+            android:label="@string/title_activity_my_moods"/>
+        <activity android:name=".HomeActivity"
+            android:label="@string/title_activity_home"/>
         <activity android:name=".AdminActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MoodPromptActivity" />
+        <activity android:name=".MoodPromptActivity"
+            android:label="@string/title_activity_mood_prompt"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".SignUpActivity"
+            android:label="@string/action_sing_up_short"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
